@@ -13,68 +13,93 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 
-
-# TODO: Could probably replace this with something based on Python logging
-# module.
-
-
-
-
-__copyright__ = "Copyright (C) 2005 Canonical Ltd."
-__author__ = "Martin Pool <mbp@canonical.com>"
-
-
 """Messages and logging for bazaar-ng
 
-Nothing is actually logged unless you call bzrlib.open_tracefile().
+Messages are sent out through the Python logging library.
+
+They can be sent to two places: to stderr, and to ~/.bzr.log.
+
+~/.bzr.log gets all messages, and tracebacks of all uncaught
+exceptions.
+
+Normally stderr only gets messages of level INFO and higher, and gets
+only a summary of exceptions, not the traceback.
 """
 
 
-import sys, os
+# TODO: in debug mode, stderr should get full tracebacks and also
+# debug messages.  (Is this really needed?)
 
-######################################################################
-# messages and logging
-
-global _tracefile, _starttime
-_tracefile = None
-
-# used to have % (os.environ['USER'], time.time(), os.getpid()), 'w')
-_starttime = None
-
-# If false, notes also go to stdout; should replace this with --silent
-# at some point.
-silent = False
+# TODO: When running the test suites, we should add an additional
+# logger that sends messages into the test log file.
 
 
-# fix this if we ever fork within python
-_mypid = os.getpid()
-_logprefix = '[%d] ' % _mypid
+import sys
+import os
+import logging
+import traceback
 
 
-def _write_trace(msg):
-    if _tracefile:
-        _tracefile.write(_logprefix + msg + '\n')
+class QuietFormatter(logging.Formatter):
+    """Formatter that supresses the details of errors.
+
+    This is used by default on stderr so as not to scare the user.
+    """
+    # At first I tried overriding formatException to suppress the
+    # exception details, but that has global effect: no loggers
+    # can get the exception details is we suppress them here.
+
+    def format(self, record):
+        s = 'bzr: '
+        if record.levelno >= logging.WARNING:
+            s += record.levelname + ': '
+            
+        s += record.getMessage() 
+            
+        if record.exc_info:
+            # give just a summary of the exception, not the whole thing
+            exinfo = traceback.extract_tb(record.exc_info[2])
+            # the format of this string matches one of the REs
+            s += '\n'
+            s += ('  at %s line %d, in %s()\n' % exinfo[-1][:3])
+            s += '  see ~/.bzr.log for debug information'
+
+        return s
+        
+################
+# configure default handler to stderr
+
+_stderr_handler = logging.StreamHandler()
+_stderr_handler.setFormatter(QuietFormatter())
+
+if os.environ.get('BZR_DEBUG'):
+    _stderr_handler.setLevel(logging.DEBUG)
+else:
+    _stderr_handler.setLevel(logging.INFO)
+
+logging.getLogger('').addHandler(_stderr_handler)
 
 
-def warning(msg):
-    sys.stderr.write('bzr: warning: ' + msg + '\n')
-    _write_trace('warning: ' + msg)
+
+################
+# configure convenient aliases for output routines
+
+_bzr_logger = logging.getLogger('bzr')
+_bzr_logger.setLevel(logging.DEBUG) 
+
+note =      _bzr_logger.info
+warning =   _bzr_logger.warning
+log_error = _bzr_logger.error
+error =     _bzr_logger.error
+mutter =    _bzr_logger.debug
+debug =     _bzr_logger.debug
 
 
-mutter = _write_trace
 
 
-def note(msg):
-    b = '* ' + str(msg) + '\n'
-    if not silent:
-        sys.stderr.write(b)
-    _write_trace('note: ' + msg)
-
-
-def log_error(msg):
-    sys.stderr.write(msg + '\n')
-    _write_trace(msg)
-
+# we do the rollover using this code, rather than the default from python
+# logging, because we only want to rollover at program startup, not on each
+# message.  maybe that's not a good enough reason.
 
 def _rollover_trace_maybe(trace_fname):
     import stat
@@ -104,47 +129,53 @@ def open_tracefile(argv=[], tracefilename='~/.bzr.log'):
     # Messages are always written to here, so that we have some
     # information if something goes wrong.  In a future version this
     # file will be removed on successful completion.
-    global _starttime, _tracefile
+    global _file_handler
     import stat, codecs
-
-    _starttime = os.times()[4]
 
     trace_fname = os.path.join(os.path.expanduser(tracefilename))
     _rollover_trace_maybe(trace_fname)
 
     # buffering=1 means line buffered
     try:
-        _tracefile = codecs.open(trace_fname, 'at', 'utf8', buffering=1)
-        t = _tracefile
+        tf = codecs.open(trace_fname, 'at', 'utf8', buffering=1)
 
-        if os.fstat(t.fileno())[stat.ST_SIZE] == 0:
+        if os.fstat(tf.fileno())[stat.ST_SIZE] == 0:
             t.write("\nthis is a debug log for diagnosing/reporting problems in bzr\n")
             t.write("you can delete or truncate this file, or include sections in\n")
             t.write("bug reports to bazaar-ng@lists.canonical.com\n\n")
+        
+        _file_handler = logging.StreamHandler(tf)
+        fmt = r'[%(process)5d] %(asctime)s.%(msecs)03d %(levelname)s: %(message)s'
+        datefmt = r'%a %H:%M:%S'
+        _file_handler.setFormatter(logging.Formatter(fmt, datefmt))
+        _file_handler.setLevel(logging.DEBUG)
+        logging.getLogger('').addHandler(_file_handler)
 
         import bzrlib
-        _write_trace('bzr %s invoked on python %s (%s)'
-                     % (bzrlib.__version__,
-                        '.'.join(map(str, sys.version_info)),
-                        sys.platform))
+        
+        debug('bzr %s invoked on python %s (%s)'
+              % (bzrlib.__version__,
+                 '.'.join(map(str, sys.version_info)),
+                 sys.platform))
 
-        _write_trace('  arguments: %r' % argv)
-        _write_trace('  working dir: ' + os.getcwdu())
+        debug('  arguments: %r' % argv)
+        debug('  working dir: ' + os.getcwdu())
     except IOError, e:
         warning("failed to open trace file: %s" % (e))
 
-def close_trace():
-    times = os.times()
-    mutter("finished, %.3fu/%.3fs cpu, %.3fu/%.3fs cum, %.3f elapsed"
-           % (times[:4] + ((times[4] - _starttime),)))
 
 
+def log_exception(msg=None):
+    """Log the last exception into the trace file.
 
-def log_exception():
-    """Log the last exception into the trace file."""
-    import cgitb
-    s = cgitb.text(sys.exc_info())
-    for l in s.split('\n'):
-        _write_trace(l)
+    The exception string representation is used as the error
+    summary, unless msg is given.
+    """
+    if msg == None:
+        ei = sys.exc_info()
+        s = str(ei[1])
+        if s[-1] == '\n':
+            s = s[:-1]
+        msg = s
         
-    
+    _bzr_logger.exception(msg)
